# searchEngine

./: CMakeLists.txt  README.md
include/: converterJSON.hpp  invertedIndex.hpp  searchServer.hpp
jsonFiles/: answers.json  config.json  requests.json
resources/: file001.txt  file002.txt  file003.txt
src/: converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: invertedIndexTest.hpp  searchServerTest.hpp
